add: Dockerfile for app